--- a/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Autohaus/Views/Zulassung/Partial/Common.cshtml
@@ -1,8 +1,12 @@
 ﻿@using CkgDomainLogic.General.Contracts
 @model CkgDomainLogic.Autohaus.ViewModels.KroschkeZulassungViewModel 
 @{
-    var logonContext = (ILogonContextDataService)SessionHelper.GetSessionObject("LogonContext");
+    var logonContext = (LogonContextDataServiceBase)SessionHelper.GetSessionObject("LogonContext");
+
+    var submitRightZulassungAbsenden = logonContext.GetCategorySettingsForWebUser("ZULASSUNG_ABSENDEN");
 }
+
+
 
 
 <style type="text/css">
@@ -47,7 +51,9 @@
     var _modelIsValid = false;
     var _customButtonText = '@(Model.ObjectKey.IsNullOrEmpty() ? Localize.AddToShoppingCart : Localize.UpdateShoppingCart)';
     var _skipBankAddressData = false;
-    var _submitRight = @logonContext.vbbi
+    var _submitRightZulassungAbsenden = '@submitRightZulassungAbsenden'; 
+    
+
 
     function KroschkeZulassungFormPreparePrivate() {
         FormPreparePrivate();
@@ -66,12 +72,28 @@
     }
 
     function FormWizardShowHideSaveButton(show, delay) {
+
         setTimeout(function () {
             $(".button-custom1 i").removeClass("m-icon-swapright").addClass("icon-shopping-cart");
             FormWizard.ButtonCustom1Show(show, _customButtonText);
+
+            // Verbergen des Absenden Buttons wenn Recht nicht gesetzt
+            if (_submitRightZulassungAbsenden === "false") {
+                $(".button-custom1").hide();
+                $(".button-submit").hide();
+            }
+
+            //  $(".button-custom1").removeClass("blue");
+            
+            
+            console.log("--------");
+            console.log(_submitRightZulassungAbsenden);
+            console.log("--------");
+       
+
         }, (typeof (buttonText) !== 'undefined' ? delay : 0));
     }
-    
+
     function FormWizardInitPrivate() {
         FormWizard.Init(function () {
             FormWizard.ActionsShow(true);
@@ -150,7 +172,7 @@
                 }
                 FormWizard.SetNextTabHtmlAndMoveNext(result);
                 FormPreparePrivateAjax();
-                
+
                 if (nextTabKey.toLowerCase() == "receipt")
                     ShoppingCartMenuRefreshCount();
             }
@@ -172,7 +194,7 @@
                 FormWizard.SetNextTabHtmlAndMoveNext(result);
                 FormPreparePrivateAjax();
 
-                if (nextTabKey.toLowerCase() == "receipt") 
+                if (nextTabKey.toLowerCase() == "receipt")
                     ShoppingCartMenuRefreshCount();
             },
             error: function (jqXhr, exception) {
@@ -328,7 +350,7 @@
         if (_ibanPrev == $(textbox).val())
             return;
         _ibanPrev = $(textbox).val();
-        
+
         if ($(textbox).val().length < 22)
             return;
 
@@ -511,7 +533,8 @@
         if ((typeof (versZul) !== "undefined") && versZul.toString().toLowerCase() == 'true') {
             $(":radio[name=HaltereintragVorhanden]").uniformRadioDisable();
             $("#Expressversand").closest(".control-group").show();
-        } else {
+        }
+        else {
             $(":radio[name=HaltereintragVorhanden]").uniformRadioEnable();
             $("#Expressversand").closest(".control-group").hide();
         }
@@ -531,7 +554,8 @@
         $('#LinkWunschkennzeichen').attr('href', url);
         if (url == undefined || url == '') {
             $('#divWkzLink').hide();
-        } else {
+        }
+        else {
             $('#divWkzLink').show();
         }
     }
@@ -542,16 +566,18 @@
         if (id == "000000000000000619") {                   // Firmeneigene Zulassung
             if (tagHaltedauer.val() == "") {  // Falls noch kein Wert vorhanden, Default setzen
                 tagHaltedauer.val("0");
-            } else {
+            }
+            else {
                 // Vom User eingegebenen Wert beim Blättern im Wizard nicht überschreiben
             }
             controlGroup.show();
-        } else {
+        }
+        else {
             tagHaltedauer.val("");
             controlGroup.hide();
         }
     }
-    
+
     // OptionenDienstleistungen
     function AjaxFormOptionenDienstleistungenComplete() {
         FormPrepareAjax();
@@ -568,7 +594,8 @@
         var kennzSondergr = $("#KennzeichenSondergroesse").is(":checked");
         if (kennzSondergr) {
             kennzGr.attr('disabled', false);
-        } else {
+        }
+        else {
             kennzGr.attr('disabled', true);
         }
     }
@@ -581,7 +608,8 @@
         if (saisKennz) {
             sais1.attr('disabled', false);
             sais2.attr('disabled', false);
-        } else {
+        }
+        else {
             sais1.attr('disabled', true);
             sais2.attr('disabled', true);
         }
@@ -660,7 +688,7 @@
     function OnComplete_AdressenAuswahlGrid() {
         var grid = $(this);
         setTimeout(function () {
-            var gridHeight = parseInt(grid.css('height').replace(/px/, ""));
+            var gridHeight = parseInt(grid.css('height').replace(/ px /, ""));
             var newHeight = (gridHeight + 80) + 'px';
             grid.closest('.t-window-content').animate({ height: newHeight }, 200); // .css('height', newHeight);
         }, 300);
