--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/_Themes/AH2015/Partial/LayoutPage/StylesDeviationDefault.cshtml
@@ -940,4 +940,8 @@ li.dashboard-dropdown-menu i {
     border-radius: 4px !important;
 }
 
+.bg-tile-pdf {
+    background-color: #d37166;
+}
+
 </style>
