--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/ShoppingCart/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/ShoppingCart/Common.cshtml
@@ -284,8 +284,8 @@
             $.uniform.update($("#uncheckAllRecords"));
             return;
         }
-        
-        if (_submitRightZulassungAbsenden === "false") {
+
+        if (_submitRightZulassungAbsenden === "False" || _submitRightZulassungAbsenden === "false") {
             $(".shopping-cart-item-selection-count").hide();
             } else {
             $(".shopping-cart-item-selection-count").show();
