--- a/inetpub/wwwroot/ServicesMvc/Areas/Common/Content/Dashboard/sDashboard.css
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Common/Content/Dashboard/sDashboard.css
@@ -361,10 +361,12 @@ a.dashboard-toolbar-item img.dashboard-item-settings {
 }
 
 .dashboard-item-row-span-dropdown-menu {
-     display: inline-block;
-     margin: 0 40px 30px 0;
-     padding: 5px 5px 5px 70px;
-     background-color: ivory;
+    display: inline-block;
+    margin: 0 40px 30px 0;
+    padding: 5px 5px 5px 70px;
+    background-color: ivory;
+    border: 1px solid #909090;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.25);
  }
 .dashboard-item-row-span-dropdown-menu .row-span-header {
     width: 310px;
