css file caching issue

--- a/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Dashboard/Partial/Common.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Dashboard/Partial/Common.cshtml
@@ -2,7 +2,7 @@
 </style>
 
 <!-- load the dashboard css -->
-<link type="text/css" href="@Url.ContentArea("Content/Dashboard/sDashboard.css")" rel="stylesheet">
+<link type="text/css" href="@Url.ContentArea("Content/Dashboard/sDashboard.css?x=20160122")" rel="stylesheet">
 		
 <!-- load touch punch library to enable dragging on touch based devices -->
 <script src="@Url.ContentArea("Content/Dashboard/touchpunch/jquery.ui.touch-punch.js")" type="text/javascript"> </script>
